[tool.poetry]
name = "wbtsre-bot"
version = "0.1.0"
description = ""
authors = ["MFesenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.17.0"
loguru = "^0.7.2"
telegraph = "^2.2.0"
bs4 = "^0.0.2"
gitpython = "^3.1.43"
python-telegram-bot = "^13.15"
urllib3 = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
